--- a/app/globals.css
+++ b/app/globals.css
@@ -8,5 +8,5 @@
 
 @font-face {
     font-family: "Comfortaa";
-    src: url("/fonts/Comfortaa.ttf") format("truefont");
+    src: url("/fonts/Comfortaa.ttf") format("truetype");
 }
